/**
 * Class to initialize a tuitionManager object and to call the run method
 * 
 * @author Weihong Chen, Nathan Ballance
 */
public class Prog2 {
    public static void main(String[] args) {
        TuitionManager rut = new TuitionManager();
        rut.run();
    }
}